--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -2,6 +2,8 @@
 
 {% load humanize %}
 
+{% block title %} | Browse Property{% endblock %}
+
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
@@ -28,6 +30,9 @@
       </nav>
     </div>
   </section>
+
+     <!-- Alerts -->
+              {% include 'partials/_alerts.html' %}
 
   <!-- Listings -->
   <section id="listings" class="py-4">
